[package]
name = "in-place"
version = "0.1.0-dev"
edition = "2021"
# TODO: Verify this and that it can't be lower:
rust-version = "1.65"
description = "In-place file processing"
authors = ["John Thorvald Wodder II <in-place-rs@varonathe.org>"]
repository = "https://github.com/jwodder/in-place-rs"
license = "MIT"
keywords = []
# See <https://crates.io/category_slugs> for a list of categories
categories = []
exclude = ["/.*"]

[dependencies]
same-file = "1.0.6"
tempfile = "3.5.0"

[dev-dependencies]
assert_fs = "1.0.13"
cfg-if = "1.0.0"
tmp_env = "0.1.1"
