[package]
name = "in-place"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.70"
description = "In-place file processing"
authors = ["John Thorvald Wodder II <in-place-rs@varonathe.org>"]
repository = "https://github.com/jwodder/in-place-rs"
license = "MIT"
keywords = ["edit", "in-place", "tempfile"]
categories = ["filesystem"]
exclude = ["/.*", "!/.cargo/"]

[dependencies]
tempfile = "3.5.0"

[dev-dependencies]
assert_fs = "1.0.13"
tmp_env = "0.1.1"
